--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
                     <img src="img/images.jpg">
                 </div>
                 <div class="list">
-                <h2>more works</h2>
+                <h2>more works by author</h2>
                 <ol>
                     <li>lady lazarus</li>
                     <li>daddy</li>
                     <li>the moon and the yew tree</li>
                     <li>you're</li>
                     <li>morning song</li>
+                    <li>the bell jar</li>
                 </ol>
                 </div>
             </aside>
